# gemz

./: .gitignore  .gitmodules  LinearBackground.md  Matrix-t.md  README.md  array_api.py  array_api_jax.py  block.py  block_mt.py  cmk.py  data.py  matrix_t.py  mixture.md  plotly_template.py  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  setup.cfg  test.py
.github/workflows/: test.yml
benchmarks/: igmm_memory.py
gemz/: __init__.py  demo.py  jax_numpy.py  jax_utils.py  linalg.py  model.py  plots.py  reporting.py  utils.py
gemz/cases/: __init__.py  cmk_cluster_means.py  heterogeneous_snr.py  lin_het.py  linear_reg.py  low_high_clustering.py  nonlinear.py  output.py  output_html.py
gemz/diagnostics/: __init__.py  plotly.py
gemz/jax/linalg/: __init__.py  array_api.py  block.py
gemz/linalg/: __init__.py  array_api.py  basics.py  block.py  low_rank.py  numpy_array_api.py  virtual_array.py
gemz/models/: __init__.py  clmt.py  cmk.py  cv.py  gmm.py  igmm.py  kmeans.py  linear.py  linear_shrinkage.py  linear_shrinkage_cv.py  lscv_free_diagonal.py  lscv_loo.py  lscv_precision_target.py  methods.py  mt_sym.py  nonlinear_shrinkage.py  ops.py  peer.py  svd.py  transformations.py  wishart.py
gemz/plots/: __init__.py  plotly_template.py
gemz/stats/: matrixt.py  model.py
r/: .gitignore  DESCRIPTION  init
tests/: conftest.py  test.mpinat.sbatch  test.sh  test_block_mt.py  test_jax_numpy.py  test_linalg.py  test_metamodel.py  test_models.py  test_regressions.py  test_utils.py
tests/regression_dashboard/: __init__.py  run_debug.sh
tests/regression_dashboard/templates/: base.html  case.html  index.html  model.html
