[project]
name = "gemz"
version = "0.0.1"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "jax", # breaks distrax
  "jaxlib", # matches jax
  "rpy2",
  "deprecation",
]

[tool.setuptools]
packages = [
  "gemz",
  "gemz.plots",
  "gemz.linalg",
  "gemz.cases",
  "gemz.jax",
  "gemz.jax.linalg",
  "gemz.stats",
  "gemz.models",
]

[project.optional-dependencies]
peer = [
  "pmbio-peer @ git+ssh://git@github.com/emorice/peer.git"
]
test = [
  "pytest"
]
dev = [
  "memory_profiler",
  "pandas",
  "plotly",
  "pylint",
  "mypy"
]

[build-system]
requires = [
  "setuptools >= 40.8.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
