[project]
name = "gemz"
version = "0.0.1"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "jax",
  "jaxlib",
  "deprecation",
]

[tool.setuptools]
packages = [
  "gemz",
  "gemz.plots",
  "gemz.linalg",
  "gemz.cases",
  "gemz.jax",
  "gemz.jax.linalg",
  "gemz.stats",
  "gemz.models",
]

[project.optional-dependencies]
peer = [
  "pmbio-peer @ git+ssh://git@github.com/emorice/peer.git"
]
r = [
  "rpy2"
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-regressions",
  "plotly",
  "pandas",
]
dev = [
  "memory_profiler",
  "pylint",
  "mypy"
]

[build-system]
requires = [
  "setuptools >= 40.8.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    # comes from flatbuffers compat layer, not even remotely our problem
    "ignore:the imp module is deprecated in favour of importlib"
]
asyncio_mode = "auto"
addopts = [
	"--cov", "--cov-report=html"
]
markers = [
	"regression: regression tests, skipped by default, select with --regression"
]

[tool.coverage.run]
source = [ "gemz" ]
omit = [
	"gemz/demo.py",
	"gemz/data.py",
	"gemz/reporting.py",
	"gemz/plots/*",
	"gemz/cases/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "return NotImplemented",
]
